--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cheerio": "^1.0.0",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
-    "puppeteer": "^23.3.0",
-    "redis": "^4.7.0"
+    "json2csv": "^6.0.0-alpha.2",
+    "puppeteer": "^23.3.1",
+    "redis": "^4.7.0",
+    "rxjs": "^7.8.1"
   }
 }
